# fastapi-boilerplate

./: .env.example  .flake8  README.md  pyproject.toml
src/: __init__.py  main.py
src/app/modules/users/: users_controller.py  users_repo.py  users_service.py
src/config/: config_service.py
src/core/helpers/: async_wrapper.py
src/routers/v1/: users_route.py
src/utils/: response_formatter.py
tests/: users_e2e_test.py
